--- a/tensionX.yaml
+++ b/tensionX.yaml
@@ -18,12 +18,9 @@ loadstep:
     f_out: none
   - boundary_conditions:
       mechanical:
-        dot_F: [[1.0e-3, 0, 0],
-                [0,      x, 0],
-                [0,      0, x]]
-        P: [[x, x, x],
-            [x, 0, x],
-            [x, x, 0]]
+        dot_F: [[0, 0, 0],
+                [0, 0, 0],
+                [0, 0, 0]]
     discretization:
       t: 1.2
       N: 12
