--- a/two_phase/material.yaml
+++ b/two_phase/material.yaml
@@ -5,7 +5,7 @@ homogenization:
     mechanical: {type: pass}
 
 phase:
-  Aluminum:
+  A:
     lattice: cF
     mechanical:
       output: [F, P, F_e, F_p, L_p, O]
@@ -22,36 +22,38 @@ phase:
         output: [xi_sl]
         xi_0_sl: [31.e+6]
         xi_inf_sl: [63.e+6]
-  Ferrite:
+  B:
     lattice: cI
     mechanical:
       output: [F, L_p, O]
-      elastic: {type: Hooke, C_11: 231.7e+9, C_12: 135.8e+9, C_44: 116.8e+9}
+      elastic: {type: Hooke, C_11: 106.75e+9, C_12: 60.41e+9, C_44: 28.34e+9}
       plastic:
         type: phenopowerlaw
-        output: [xi_sl, gamma_sl]
-        N_sl: [12, 12]
-        n_sl: 20
+        N_sl: [12]
         a_sl: 2.25
-        h_0_sl-sl: 1.0e+9
-        xi_0_sl: [95.e+6, 96.e+6]
-        xi_inf_sl: [222.e+6, 412.e+6]
-        h_sl-sl: [1, 1.4, 1, 1.4, 1.4, 1.4, 1.4, 1.4, 1.4, 1.4, 1.4, 1.4, 1.4, 1.4, 1.4, 1.4, 1.4, 1.4, 1.4, 1.4, 1.4, 1.4, 1.4, 1.4]
+        atol_xi: 1.0
         dot_gamma_0_sl: 0.001
+        h_0_sl-sl: 75.e+6
+        h_sl-sl: [1, 1, 1.4, 1.4, 1.4, 1.4, 1.4]
+        n_sl: 20
+        output: [xi_sl]
+        xi_0_sl: [41.e+6]
+        xi_inf_sl: [93.e+6]
+
 
 material:
   - homogenization: SX
     constituents:
-      - phase: Aluminum
+      - phase: A
         v: 1.0
         O: [1.0, 0.0, 0.0, 0.0]
   - homogenization: SX
     constituents:
-      - phase: Aluminum
+      - phase: A
         v: 1.0
         O: [0.7936696712125002, -0.28765777461664166, -0.3436487135089419, 0.4113964260949434]
   - homogenization: SX
     constituents:
-      - phase: Ferrite
+      - phase: B
         v: 1.0
         O: [0.3986143167493579, -0.7014883552495493, 0.2154871765709027, 0.5500781677772945]
